packages/infrastructure/root_package_apps/chat-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      containers:
        - name: chat-frontend
          image: krusonl.azurecr.io/chat-frontend:main # kpt-set: ${frontend.image}
          ports:
            - containerPort: 8501
          resources: {}
