packages/infrastructure/root_package_apps/chat-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
spec:
  selector:
    app: chat-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
