packages/infrastructure/root_package_apps/chat-frontend/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-frontend
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /agenticgame
      route:
        - destination:
            host: chat-frontend
            port:
              number: 80
